# family-ai-assistant

./: .env.example  .flake8  .gitignore  1  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CICD_AND_LOGGING_SUMMARY.md  DATA_CONSISTENCY_FIX.md  DEPLOY.md  DEPLOY_CHECKLIST.md  DEPLOY_THREEMA.md  FAMILY_DATA_GUIDE.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_LLM_PROVIDERS.md  Makefile  OPS_CHEATSHEET.md  PRIVACY_SETUP.md  QUICKSTART.md  QUICK_REFERENCE_LLM_PROVIDERS.md  QUICK_START_MULTIMODAL.md  QUICK_SUMMARY.md  REFACTORING_COMPLETE.md  SCOPE_DRIVEN_ARCHITECTURE.md  USAGE_EXAMPLES.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  edition1.MD  env.example  family_data_example.json  pyproject.toml  readme.MD  requirements.txt  todolist.md
.devcontainer/: devcontainer.json  docker-compose.dev.yml
alembic/: env.py  script.py.mako
config/: context_policy.yaml
docker/: Dockerfile  Dockerfile.dev  postgresql.conf
docs/: AI_ENGINE_TECHNICAL.md  BUDGET_ENHANCEMENTS.md  BUSINESS_FLOW.md  DEPLOYMENT.md  DOCKER_COMPOSE_GUIDE.md  DOCUMENTATION_UPDATE_20250929.md  ENVIRONMENT_SETUP.md  FILE_MANAGEMENT.md  GITHUB_ACTIONS_SETUP.md  IMPROVEMENT_GUIDE.md  MULTIMODAL_FEATURES.md  PROJECT_ANALYSIS.md  QUICK_START_DEPLOY.md  QUICK_START_USAGE_TRACKING.md  README.md  REFACTORING_SUMMARY.md  V2_INTELLIGENCE_UPGRADE.md  V2_USAGE_GUIDE.md  crontab.example
examples/: ab_testing_example.py  cost_calculator.py  test_api.py  test_budget.py  test_budget_advanced.py  test_chart_generation.py  test_clarification.py  test_intelligent_context.py  test_payment_screenshot.py  test_provider_config.py  test_reminder_fix.py  (+2 more)
(+139 files in other folders)
