[project]
name = "family-ai-assistant"
version = "0.1.0"
description = "AI-powered family assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.6",
    "openai>=2.6.0",
    "anthropic>=0.34.0",
    "pyyaml>=6.0.2",
    "aiohttp>=3.11.10",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "structlog>=24.4.0",
    "mcp>=1.12.4",
    "PyNaCl>=1.5.0",
    "fastembed>=0.7.3",
    "alembic>=1.13.2",
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
    "tiktoken>=0.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
